--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -7,7 +7,7 @@
 {% block meta-keywords-page %}Home Page, Simple, Bookmarklets{% endblock %}
 
 {% block header %}
-	{% with 'The Homepage' as page.header %}
+	{% with header="The Homepage" %}
 	{{ block.super }}
 	{% endwith %}
 {% endblock %}
