Put back in the styling

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -18,9 +18,9 @@
 		<link rel="stylesheet" type="text/css" media="print" href="{% static "css/print.css" %}" />
 
 		<link rel="stylesheet" type="text/css" href="{% static "css/normalize.css" %}" />
-		{#<link rel="stylesheet" type="text/css" href="{% static "css/layout.css" %}" />#}
-		{#<link rel="stylesheet" type="text/css" href="{% static "css/stickyfooter.css" %}" />#}
-		{#<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap/bootstrap.css" %}" />#}
+		<link rel="stylesheet" type="text/css" href="{% static "css/layout.css" %}" />
+		<link rel="stylesheet" type="text/css" href="{% static "css/stickyfooter.css" %}" />
+		<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap/bootstrap.css" %}" />
 		<!--[if lt IE 8]>
 		<link rel="stylesheet" type="text/css" media="screen, projection" href="{% static "ie.css" %}" />
 		<![endif]-->
